<resources>
    <string name="app_name">StoryApp</string>
    <string name="story_activity_label">Story</string>
    <string name="less_than_8_char_password_error">Password must at least 8 characters</string>
    <string name="email_format_is_not_valid">Email format is not valid</string>
    <string name="email_hint">Your email</string>
    <string name="password_hint">Create password</string>
    <string name="name_hint">Your name</string>
    <string name="register_text_suggestion">Don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_text_suggestion">Already have account?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="upload_from_camera">Camera</string>
    <string name="upload_from_gallery">Gallery</string>
    <string name="upload_button">Upload</string>
    <string name="camera_permission_denied">Camera can not be start without permission</string>

    <string name="card_view_avatar_content_description">Frame of user\'s photo</string>
    <string name="image_avatar_content_description">Picture of user</string>
    <string name="btn_camera_upload_content_description">Capture a picture</string>
    <string name="btn_gallery_upload_content_description">Upload picture from gallery</string>
    <string name="et_description_post_content_description">Post\'s description</string>
    <string name="btn_upload_content_description">Post story</string>
    <string name="tv_user_name_detail_story_content_description">User\'s name %s</string>
    <string name="rv_list_stories_content_description">List of stories</string>
    <string name="fab_add_post_content_description">Create a story</string>

    <string name="no_data_found_message">No data found</string>
    <string name="language_setting">Language</string>
    <string name="logout">Logout</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_location">Location</string>
    <string name="appwidget_text">Example</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="retry">Retry</string>
    <string name="permission_not_granted">Action cannot be done without permission</string>
    <string name="location_not_found">Location not found</string>
    <string name="include_location">Include current location</string>
    <string name="post_description_or_image_empty">Please fill the description or select an image</string>
</resources>