<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.AddStoryFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_avatar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:cardCornerRadius="10pt"
        app:cardElevation="0dp"
        android:contentDescription="@string/card_view_avatar_content_description"
        app:layout_constraintBottom_toTopOf="@+id/ll_upload_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/image_avatar_content_description"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_upload_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/et_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_avatar">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload_from_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/upload_from_camera"
            android:textAllCaps="false"
            android:contentDescription="@string/btn_camera_upload_content_description"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_from_gallery"
            android:textAllCaps="false"
            android:contentDescription="@string/btn_gallery_upload_content_description"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="start"
        android:hint="@string/et_description_post_content_description"
        app:layout_constraintBottom_toTopOf="@+id/btn_post_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_upload_buttons"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_post_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/upload_button"
        android:textAllCaps="false"
        android:contentDescription="@string/btn_upload_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>